# Robust-Analytical-Vehicle-for-Exploration-and-Navigation

./: LICENSE
raven_ws/src/raven_bringup/: CMakeLists.txt  package.xml
raven_ws/src/raven_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
raven_ws/src/raven_controller/: CMakeLists.txt  package.xml
raven_ws/src/raven_controller/config/: joy_teleop.yaml  raven_controllers.yaml  twist_mux_joy.yaml
raven_ws/src/raven_controller/launch/: controller.launch.py  joystick_teleop.launch.py
raven_ws/src/raven_controller/raven_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
raven_ws/src/raven_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
raven_ws/src/raven_description/: CMakeLists.txt  package.xml
raven_ws/src/raven_description/launch/: display.launch.py  gazebo.launch.py
raven_ws/src/raven_description/meshes/: bottom_body.stl  depthcamera.stl  drive_wheel.stl  rplidar_c1.stl  wheel.stl
raven_ws/src/raven_description/rviz/: display.rviz
raven_ws/src/raven_description/urdf/: raven.urdf.xacro  raven_gazebo.xacro  raven_ros2_control.xacro
raven_ws/src/raven_firmware/: CMakeLists.txt  package.xml  raven_interface.xml
raven_ws/src/raven_firmware/launch/: hardware_interface.launch.py
raven_ws/src/raven_firmware/src/: raven_interface.cpp  simple_serial_transmitter.cpp
raven_ws/src/raven_localization/: CMakeLists.txt  package.xml
raven_ws/src/raven_localization/config/: amcl.yaml  ekf.yaml  odometry_motion_model.rviz
raven_ws/src/raven_localization/launch/: global_localization.launch.py  local_localization.launch.py
raven_ws/src/raven_localization/raven_localization/: kalman_filter.py  odometry_motion_model.py
raven_ws/src/raven_localization/src/: kalman_filter.cpp  odometry_motion_model.cpp
raven_ws/src/raven_mapping/: CMakeLists.txt  package.xml
raven_ws/src/raven_utils/: CMakeLists.txt  package.xml
raven_ws/src/raven_utils/raven_utils/: safety_stop.py
raven_ws/src/raven_utils/src/: safety_stop.cpp
(+8 files in other folders)
