<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raven_bringup</name>
  <version>0.0.0</version>
  <description>raven Bringup package</description>
  <maintainer email="amithtitus2003@gmail.com">amithmathewtitus</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>raven_firmware</exec_depend>
  <exec_depend>raven_controller</exec_depend>
  <exec_depend>raven_description</exec_depend>
  <exec_depend>raven_localization</exec_depend>
  <exec_depend>raven_mapping</exec_depend>
  <exec_depend>raven_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
